--- a/fe/.gitignore
+++ b/fe/.gitignore
@@ -21,3 +21,26 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Build output
+/build
+/dist
+
+# IDEs
+/.vscode
+.idea/
+
+# Logs
+*.log
+
+# Coverage reports
+/coverage
+
+# TypeScript build info
+*.tsbuildinfo
+
+# ESLint cache
+.eslintcache
+
+# Next.js build output (if using Next.js)
+.next/
